fix alignment of track-line in footer

--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ svg.mobile-menu {
 .download-img {
   width: 15px;
   margin-left: -5px;
+  vertical-align: middle;
 }
 
 .avatar img {
@@ -240,6 +241,11 @@ svg.mobile-menu {
   border-radius: 100%;
   width: 20px;
   height: 20px;
+  vertical-align: middle;
+}
+
+.sidebar .bottom span {
+  vertical-align: middle;
 }
 
 /* LEFT-CONTAINER */
@@ -263,9 +269,9 @@ header {
 
 .btn {
   display: inline-block;
-  height: 40px;
-  width: 250px;
-  line-height: 35px;
+  height:40px;
+  width: 215px;
+  line-height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.9);
   color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
@@ -374,12 +380,13 @@ footer .col.center {
 footer .center .top {
   height: 60%;
   width: 100%;
-  margin: 10px 0;
+  margin-top: 10px;
 }
 
 footer .center .bottom {
   height: 40%;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 footer .album {
@@ -468,7 +475,6 @@ footer .left .icon{
 footer .right .icon {
   font-size: 0.8rem;
   margin-right: 20px;
-  
 }
 
 footer .icon {
